# signals_receipts

./: .clippy.toml  Cargo.toml  README.md  run-checks
examples/: child_reset_mask.rs  dedicated_thread.rs  exercise.rs  minimal.rs
src/: atomics.rs  help.rs  lib.rs  premade.rs  util.rs
src/premade/: __internal.rs  channel_notify_facility.rs  receipts.rs
src/premade/__internal/: channel_notify_facility.rs
src/premade/channel_notify_facility/: receipts_thread.rs  signals_channel.rs  state.rs
src/premade/channel_notify_facility/signals_channel/: encapsulated.rs
tests/: channel_notify_facility.rs  finish.rs  reset.rs  usage.rs  weird.rs
tests/help/: util.rs
tests/util/: mod.rs
